--- a/src/css/Chat.css
+++ b/src/css/Chat.css
@@ -1,5 +1,92 @@
-.sidebar {
+.chat {
     display: flex;
     flex-direction: column;
     flex: 0.65;
+}
+
+.chat-header{
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid lightgray;
+}
+
+.chat-headerInfo{
+    flex: 1;
+    padding-left: 20px;
+}
+
+.chat-headerInfo > h3 {
+    /*margin-bottom: 1px;*/
+    font-weight: 500;
+}
+
+.chat-headerInfo > p{
+    color: gray;
+}
+
+.chat-body{
+    flex: 1;
+    background-image: url("https://i.pinimg.com/originals/ab/ab/60/abab60f06ab52fa7846593e6ae0c9a0b.png");
+    background-repeat: repeat;
+    background-position: center;
+    padding: 35px;
+    overflow: scroll;
+}
+
+.chat-message{
+    position: relative;
+    font-size: 16px;
+    padding: 10px;
+    width: fit-content;
+    border-radius: 10px;
+    background-color: #ffffff;
+    margin-bottom: 30px;
+}
+
+.chat-receiver{
+    margin-left: auto;
+    background-color: #dcf8c6;
+}
+
+.chat-timestamp{
+    margin-left: 10px;
+    font-size: xx-small;
+}
+
+.chat-name{
+    position: absolute;
+    top: -25px;
+    font-weight: 700;
+    font-size: small;
+}
+
+.chat-footer{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 62px;
+    border-top: 1px solid lightgray;
+}
+
+.chat-footer > form{
+    display: flex;
+    flex: 1;
+}
+
+.chat-footer > form > input{
+    flex: 1;
+    border-radius: 30px;
+    padding: 10px;
+    border: none;
+    outline-width: 0;
+}
+
+.chat-footer > form > button{
+    display: none;
+}
+
+.chat-footer > .MuiSvgIcon-root{
+    padding: 10px;
+    color: gray;
 }
